@@ -8,6 +8,7 @@ Version 2.7.0
 * remove padCalcScans script
 * Add a new match type for file formats CODIF and CODIFD
 * Added support for CODIF format in vex files (at least, in the vex2difx parser)
+* Don't quit if unused antenna's filelist is absent
 
 Version 2.6.0
 ~~~~~~~~~~~~~
